2008-01-09  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_free_mem: Initial revision
