@@ -15,6 +15,7 @@ INSTALL
 Makefile.PL
 MANIFEST			This list of files
 MANIFEST.SKIP
+META.yml
 NAME
 NEWS
 README
