@@ -1,2 +1,3 @@
-Option to specify the path of free
+ * Support other systems (e.g., Mac OS X, Solaris, ...)
+
 
