@@ -1,0 +1,2 @@
+2008-01-13   Version 0.11.0: added --free to specify the path of 'free'
+2008-01-13   Version 0.10.0: added --swap to monitor swap space
